extend_solution_to_use_bleu_and_rouge_as_py_modules

--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,4 @@
 [DEFAULT]
 MODEL = qwen2-0.5b-instruct
-PROMPT = 'Create me a for loop in Python'
+PROMPT = Show me the code of for loop in Python
 MODEL_PATH = C:\Users\pwala\.cache\lm-studio\models
