reading_pdf_example

--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,4 @@
 [DEFAULT]
 MODEL = qwen2-0.5b-instruct
-PROMPT = Show me the code of for loop in Python
+PROMPT = Summarize me this text
 MODEL_PATH = C:\Users\pwala\.cache\lm-studio\models
